tests/NormalTests/paczka1/small_fuzzy/22494979.err
Error in line 3: u3DLR A888 21,9
Error in line 7: A877 A706 19,3
Error in line 6: u3DLR S423 11,9
